crates/test-files/fixtures/compile_errors/duplicate_struct_in_module.fe
struct MyStruct {
    foo: u8
}

struct MyStruct {
    foo: u8
}

contract Foo {
    pub fn bar() {}
}
